# magic-the-collecting

./: .dockerignore  .env.prod.example  .env.test.example  .gitignore  .gitmodules  AGENTS.md  API.md  Dockerfile  README.md  ROADMAP.md  alembic.ini  compose.test.yml  compose.yml  docker-entrypoint.sh  pyproject.toml  registration_service_requirements.md  sorter_sequence_requirements.md
entrypoints/: setup-local-host.ps1  start-and-open-ui.ps1  start-local-host.ps1  start-local.ps1  stop-local-host.ps1
migrations/: env.py
migrations/versions/: 0001_initial.py
scripts/: reset-test-env.ps1  run-test-env.ps1
src/registration_service/: catalog.py  config.py  database.py  images.py  main.py  maintenance.py  migrate.py  models.py  recognition.py  schemas.py  seed.py  services.py  worker.py
src/registration_service/static/: register.js  styles.css
src/registration_service/templates/: base.html  collection_detail.html  collections.html  queue.html  recognition_queue.html  register.html  review.html
tests/: conftest.py  test_api.py
